remove React and TailwindCSS

--- a/src/pages/options/index.html
+++ b/src/pages/options/index.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8" />
         <title>Options</title>
     </head>
-
-    <body>
-        <div id="__root"></div>
-        <script type="module" src="./index.tsx"></script>
+    <body id="options">
+        <main>
+            <p>Options</p>
+        </main>
+        <script type="module" src="./index.ts"></script>
     </body>
 </html>
