--- a/src/pages/panel/index.html
+++ b/src/pages/panel/index.html
@@ -5,8 +5,10 @@
         <title>Devtools Panel</title>
     </head>
 
-    <body>
-        <div id="__root"></div>
-        <script type="module" src="./index.tsx"></script>
+    <body id="panel">
+        <main>
+            <p>Devtools Panel</p>
+        </main>
+        <script type="module" src="./index.ts"></script>
     </body>
 </html>
