--- a/src/pages/popup/index.html
+++ b/src/pages/popup/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>Popup</title>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Popup</title>
+  </head>
 
-    <body>
-        <div id="__root"></div>
-        <script type="module" src="./index.tsx"></script>
-    </body>
+  <body id="popup">
+    <main>
+      <p>Popup</p>
+    </main>
+    <script type="module" src="./index.ts"></script>
+  </body>
 </html>
