storage, icons, and off and on

--- a/src/pages/options/index.html
+++ b/src/pages/options/index.html
@@ -7,6 +7,7 @@
     <body id="options">
         <main>
             <p>Options</p>
+            <button id="toggle-extension"></button>
         </main>
         <script type="module" src="./index.ts"></script>
     </body>
