--- a/src/pages/popup/index.html
+++ b/src/pages/popup/index.html
@@ -8,6 +8,7 @@
   <body id="popup">
     <main>
       <p>Popup</p>
+      <button id="toggle-extension"></button>
     </main>
     <script type="module" src="./index.ts"></script>
   </body>
